	- Apply patch from http://www.fehcom.de/qmail/smtpauth.html
	  to fix CRAM-MD5 SMTP AUTH in vchkpw. [871493]
	- Have vchkpw.c use get_remote_ip() to convert IPv6 to IPv4
	  (fixed problem with ::ffff: in relay file). [876019]
	- Fix bug in vpalias where .qmailadmin-limits was incorrectly
	  thought to be alias for user 'dmin-limits'.
	- Sort by alias in valias_select_all (needed for QmailAdmin).

	Bill Shupp
	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]

	Casey Zacek
	- Create maildirsize file in vsetuserquota(). [869457]

	Anders Brander
	- Allow optional length for random passwords in vadduser and
	  vadddomain. [848228]

5.4.0-rc1 - released 1-Jan-04

	Michael Bowe
	- Code fixes and documentation work for LDAP module. 
	  Incl updated README.ldap, vldap.c, vldap.h, ldap/slapd.conf, 
	  ldap/vpopmail.ldif. [863881] [811000] [864643]
	- Rewrote the README.mysql based on my web based guide.
	- Documentation tweaks for README.pgsql, README.roamingusers.

	Tom Collins
	- Remove unused var (cp), change random/srandom to rand/srand in
	  vpopmail.c to remove compiler warnings.
	- Fix Makefile to use correct owner/group/permissions for 
	  install-strip.
	- Fix configure to indicate that --enable-auth-logging is default.
 
5.4.0-pre2 - released 21-Dec-03

	*** Note that the configure option for setting the authentication
	*** module has changed.  Instead of --enable-mysql, use
	*** --enable-auth-module=mysql.

	Casey Zacek
	- Keep vlimits_setflags() in vlimits.c when mysql-limits is
	  enabled. [858109]
	- Create maildirsize file when adding new user. [858994]

	Tom Collins
	- open_smtp_relay(): fix address conversion of '::ffff:127.0.0.1'
	  ip format, move code to function and replace calls to
	  getenv("TCPREMOTEIP"). [858586]
	- When optimizing adddomain, rebuild users/cdb after each addition
	  instead of postponing. [859707, temporary fix]
	- Move maildir_to_email() from vdelivermail.c into vpopmail.c,